// mid_saving.proto
syntax = "proto3";

package protobuf;

import "user.proto";
import "saving.proto";
import "google/api/annotations.proto";

service MidSavingService {
  rpc GetJWT(LoginRequest) returns (JWT){
    option (google.api.http) = {
      post: "/api/login"
      body: "*"
    };
  };

  rpc GetCurrentKYC(GetCurrentKYCRequest) returns (GetCurrentKYCResponse){
    option (google.api.http) = {
      post: "/api/users/kyc"
      body: "*"
    };
  };

  rpc GetUserByID(UserID) returns (User){
    option (google.api.http) = {
      post: "/api/users/by-id"
      body: "*"
    };
  };
  rpc GetUserByIdCardNumber(IDCardNumber) returns (User){
    option (google.api.http) = {
      post: "/api/users/by-card"
      body: "*"
    };
  };
  rpc GetUserByAccountID(AccountID) returns (User){
    option (google.api.http) = {
      post: "/api/users/by-account-id"
      body: "*"
    };
  };

  rpc GetAccount(AccountInquiryRequest) returns (SavingAccount){
    option (google.api.http) = {
      post: "/api/accounts/inquiry"
      body: "*"
    };
  };

  rpc GetAccountByID(AccID) returns (SavingAccount){
    option (google.api.http) = {
      post: "/api/accounts/search-by-id"
      body: "*"
    };
  };
  rpc ListAccountsByIDCardNumber(IDCardNumber) returns (SavingAccountList){
    option (google.api.http) = {
      post: "/api/accounts/search-by-id-card"
      body: "*"
    };
  };
  rpc ListAccountsByUserID(AccountInquiryRequest) returns (SavingAccountList){
    option (google.api.http) = {
      post: "/api/accounts/search-by-user-id"
      body: "*"
    };
  };

  rpc ListAccountsByFilter(Filter) returns (SavingAccountList){
    option (google.api.http) = {
      post: "/api/accounts/search"
      body: "*"
    };
  };

  rpc ListUserByNumberAccountRange(NumberAccountRange) returns (ListUserWithAccounts){
    option (google.api.http) = {
      post: "/api/users/search-by-number-account-range"
      body: "*"
    };
  };

  rpc ListUsersByFilter(UserFilter) returns (UserList){
    option (google.api.http) = {
      post: "/api/users/by-filter"
      body: "*"
    };
  };

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/api/users/register"
      body: "*"
    };
  };

  rpc CreateSavingsAccount(OpenSavingsAccountRequest) returns (OpenSavingsAccountResponse){
    option (google.api.http) = {
      post: "/api/accounts/register"
      body: "*"
    };
  };

  rpc UpdateAccountByWithdrawal(WithdrawalRequest) returns (WithdrawalResponse){
    option (google.api.http) = {
      post: "/api/accounts/withdrawal"
      body: "*"
    };
  };

  rpc UpdateUser(User) returns (User){
    option (google.api.http) = {
      post: "/api/users/update"
      body: "*"
    };
  };

  rpc DeleteUser(User) returns (DeleteUserResponse);
  rpc DeleteAccount(SavingAccount) returns (DeleteAccountResponse);

}



